# todo_five

./: README.rst  conftest.py  pyproject.toml  todo.py
.github/workflows/: test.yml
data/test/: test_one.db
docs/sphinx/source/: DevelopersManual.rst  UsersManual.rst  conf.py
tests/: database_test.py  widgets_test.py
todo_five/: database.py  main.py  menu_bar.py  widgets.py
