[tool.poetry]
name = "todo-five"
version = "0.1.0"
description = ""
authors = ["Jon Webb <webbja123@gmail.com>"]
readme = "README.rst"
packages = [{include = "todo_five"}]

[tool.poetry.dependencies]
python = ">3.11,<3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
flake8 = "^6.0.0"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.6.5"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.13.0"
flake8-implicit-str-concat = "^0.4.0"
flake8-print = "^5.0.0"
tox = "^4.6.3"
pytest-cov = "^4.1.0"
pyupgrade = "^3.7.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
	"Operating System :: POSIX :: Linux",
]

[tool.isort]
profile = 'black'

[tool.black]
line-length = 90
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.tox]
legacy_tox_ini = """
	[tox]
    env_list = py311, mypy, lint

    [testenv]
	description = run tests with pytest
    deps = pytest
    commands = pytest tests -v {posargs}

	[testeng:mypy]
	deps = mypy
	commands = mypy todo_five

	[testenv:lint]
	deps = pre-commit
	commands = pre-commit run --all-files --show-diff-on-failure

	[gh-actions]
	python =
		3.11: py311, mypy, lint
"""

[tool.mypy]
exclude = ["docs", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
console_output_style = "progress"

[project.urls]
"Homepage" = "https://github.com/Jon-Webb-79/todo_five"
